added cover image

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -93,6 +93,7 @@
         </video>
     </header>
     <section class="container-fluid">
+    <img src="img/IMG_0716.JPG" id="coverimage">
     <div class="text-center" id="coversection">
     
     	<p><strong>The 85th Texas Regular Legislative Session was one of the ugliest and least productive in recent memory.</strong> Despite the odds, CPPP staff worked tirelessly with lawmakers and partners to get good bills across the finish line and block bad ones. 
