fixed image by adding <figure> tag

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -93,10 +93,12 @@
         </video>
     </header>
     <section class="container-fluid">
-    <div class="text-center">
-    	<img src="img/IMG_0716.JPG" id="coverimage" alt="Activists protest Senate Bill 4 in the Capitol Rotunda.">
-    </div>
     <div class="text-center" id="coversection">
+    
+    	<figure class="figure">
+  <img src="img/IMG_0716.JPG" class="figure-img img-fluid rounded" alt="Activists protest Senate Bill 2 in the Capitol Rotunda." id="coverimage">
+  <figcaption class="figure-caption">Activists protest Senate Bill 2 in the Capitol Rotunda.</figcaption>
+</figure>
     
     	<p><strong>The 85th Texas Regular Legislative Session was one of the ugliest and least productive in recent memory.</strong> Despite the odds, CPPP staff worked tirelessly with lawmakers and partners to get good bills across the finish line and block bad ones. 
 <br>
