changed cover photo filename (Github fix)

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -96,7 +96,7 @@
     <div class="text-center" id="coversection">
     
     	<figure class="figure">
-  <img src="img/IMG_0716.JPG" class="figure-img img-fluid rounded" alt="Activists protest Senate Bill 2 in the Capitol Rotunda." id="coverimage">
+  <img src="img/rotundaprotest.jpg" class="figure-img img-fluid rounded" alt="Activists protest Senate Bill 2 in the Capitol Rotunda." id="coverimage">
   <figcaption class="figure-caption">Activists protest Senate Bill 2 in the Capitol Rotunda.</figcaption>
 </figure>
     
