added text-left class to fig caption

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -97,7 +97,7 @@
     
     	<figure class="figure">
   <img src="img/rotundaprotest.jpg" class="figure-img img-fluid rounded" alt="Activists protest Senate Bill 2 in the Capitol Rotunda." id="coverimage">
-  <figcaption class="figure-caption">Activists protest Senate Bill 2 in the Capitol Rotunda.</figcaption>
+  <figcaption class="figure-caption text-left">Activists protest Senate Bill 2 in the Capitol Rotunda.</figcaption>
 </figure>
     
     	<p><strong>The 85th Texas Regular Legislative Session was one of the ugliest and least productive in recent memory.</strong> Despite the odds, CPPP staff worked tirelessly with lawmakers and partners to get good bills across the finish line and block bad ones. 
