--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -100,7 +100,7 @@
   <figcaption class="figure-caption text-left">Activists protest Senate Bill 2 in the Capitol Rotunda.</figcaption>
 </figure>
     
-    	<p><strong>The 85th Texas Regular Legislative Session was one of the ugliest and least productive in recent memory.</strong> Despite the odds, CPPP staff worked tirelessly with lawmakers and partners to get good bills across the finish line and block bad ones. 
+    	<p class="text-left"><strong>The 85th Texas Regular Legislative Session was one of the ugliest and least productive in recent memory.</strong> Despite the odds, CPPP staff worked tirelessly with lawmakers and partners to get good bills across the finish line and block bad ones. 
 <br>
 <br>
 Lawmakers spent precious time and energy on discriminatory responses to manufactured problems, instead of focusing on the real challenges facing our state. They missed countless opportunities to adopt policies that would have made Texas healthier, better educated and more financially secure. While a few sensible policies managed to make it through, overall the session pitted Texans against their neighbors while failing to invest in a strong future for hard-working people and their families.
