added headline and byline

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -94,6 +94,8 @@
     </header>
     <section class="container-fluid">
     <div class="text-center" id="coversection">
+    <h1 id="coverheadline">The 85th Legislature Was Out of Sync with Texans Values and Needs</h1>
+    <p id="coverbyline"><i>By Ann Beeson, Executive Director of the Center for Public Policy Priorites</i></p>
     
     	<figure class="figure">
   <img src="img/rotundaprotest.jpg" class="figure-img img-fluid rounded" alt="Activists protest Senate Bill 2 in the Capitol Rotunda." id="coverimage">
@@ -101,9 +103,8 @@
 </figure>
 <br>
 <br>
-    
+ 
 <p class="text-left drop-cap">The 85th Texas Regular Legislative Session was one of the ugliest and least productive in recent memory. Despite the odds, CPPP staff worked tirelessly with lawmakers and partners to get good bills across the finish line and block bad ones. 
-<br>
 <br>
 Lawmakers spent precious time and energy on discriminatory responses to manufactured problems, instead of focusing on the real challenges facing our state. They missed countless opportunities to adopt policies that would have made Texas healthier, better educated and more financially secure. While a few sensible policies managed to make it through, overall the session pitted Texans against their neighbors while failing to invest in a strong future for hard-working people and their families.
 <br><br>
