--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -142,8 +142,21 @@ We express our deep gratitude to the many lawmakers, legislative staff, partners
                     	<img src="img/heart.png" alt="Heart" class="priorityimg img-responsive pull-right">
                     </div>
                     <p class="policydescrip">CPPP engaged in a two-front war during the 85th session, defending health and hunger benefits at both the state and federal levels. Under-funding of Medicaid in the budget process received strong attention and was fortunately reduced by two-thirds, and legislators extensively debated their responsibility to more adequately fund Medicaid in 2019. Texas lawmakers advanced no sweeping gains in coverage for 4.6 million uninsured, while Congress debated bills that would increase the ranks of the uninsured. Still, lawmakers achieved a surprising number of policy advances in mental health and kinship care. Support also came from across the political spectrum for consumer protections in commercial health insurance and for improved access to non-physician providers in Medicaid.</p>
-							
-                           </div>
+                    <div class="row">
+                    	<div class="col-xs-4">
+                    		<h1>Our Objectives</h1>
+                        		<li>Protect Medicaid and CHIP from cuts</li>
+                           	 	<li>Increase funding and provider capacity for state family planning</li>
+                            	<li>Support expanded scope of practice and access to non-physician medical and mental health professionals</li>
+                        </div>
+                    	<div class="col-xs-8">
+                        	<h1>Good Bills Passed or Bad Bills Blocked</h1>
+                        		<li>Protect Medicaid and CHIP from cuts</li>
+                           	 	<li>Increase funding and provider capacity for state family planning</li>
+                            	<li>Support expanded scope of practice and access to non-physician medical and mental health professionals</li>
+                        </div>
+                    </div>
+                     </div>
                     
                 <hr>
                 <div class="media wow fadeIn">
