--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -151,7 +151,7 @@ We express our deep gratitude to the many lawmakers, legislative staff, partners
                                 <br>
                             	<li>Support expanded scope of practice and access to non-physician medical and mental health professionals</li>
                         </div>
-                    	<div class="col-xs-12 col-sm-8">
+                    	<div class="col-xs-12 col-sm-offset-1 col-sm-7">
                         	<h1>Good Bills Passed or Bad Bills Blocked</h1>
                         		<li>Protect Medicaid and CHIP from cuts</li>
                                 <br>
