fix bulleted list

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -153,11 +153,17 @@ We express our deep gratitude to the many lawmakers, legislative staff, partners
                         </div>
                     	<div class="col-xs-12 col-sm-offset-1 col-sm-7">
                         	<h1>Good Bills Passed or Bad Bills Blocked</h1>
-                        		<li>Protect Medicaid and CHIP from cuts</li>
+                        		<li>Potentially catastrophic under-funding of Medicaid in the state budget was improved during the budget-writing process, and lawmakers provided supplemental 2017 Medicaid funds.</li>
                                 <br>
-                           	 	<li>Increase funding and provider capacity for state family planning</li>
+                           	 	<li>A new law will allow advanced practice nurses to participate in Medicaid Managed Care plans.</li>
                                 <br>
-                            	<li>Support expanded scope of practice and access to non-physician medical and mental health professionals</li>
+                            	<li>A bad bill died that would have added limits to children and parents in the Texas Medicaid program and toughened eligibility requirements. </li>
+                                <br>
+                                <li>Family planning program budgets increased by about 10 percent, though with heavy reliance on assumed federal funds gained in 2019 from a not-yet-submitted Medicaid waiver application.</li>
+                        </div>
+                        <div class="col-xs-12 col-sm-offset-5 col-sm-7">
+                        	<h1>Other Progress Made</h1>
+                        		<p>For the first time, a bill to remove the requirement that advance practice nurses practice under oversight of a delegating physician received a robust committee hearing with broad support.</p>
                         </div>
                     </div>
                      </div>
