--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -165,6 +165,11 @@ We express our deep gratitude to the many lawmakers, legislative staff, partners
                         	<h1>Other Progress Made</h1>
                         		<p>For the first time, a bill to remove the requirement that advance practice nurses practice under oversight of a delegating physician received a robust committee hearing with broad support.</p>
                         </div>
+                        <div class="col-xs-12 col-sm-offset-5 col-sm-7">
+                        	<h1>Missed Opportunities and New Challenges</h1>
+                        		<li>The Senate rejected most of the House’s substantial reversals of harmful Medicaid pediatric therapy rate cuts from 2015, leaving children with special health care needs or disabilities vulnerable.</li>
+                                <li>Ongoing federal efforts to repeal the Affordable Care Act, cap funding to states for Medicaid and reduce support for critical health care services threaten the Texas health care safety net.</li>
+                        </div>
                     </div>
                      </div>
                     
