added #eoobjectives, changed color

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -187,7 +187,7 @@ We express our deep gratitude to the many lawmakers, legislative staff, partners
                     		<img src="img/books.png" alt="Books" class="priorityimg img-responsive pull-right">
                     	</div>
                         <div class="row">
-                    	<div class="col-xs-12 col-sm-4" id="hwobjectives">
+                    	<div class="col-xs-12 col-sm-4" id="eoobjectives">
                     		<h1>Our Objectives</h1>
                         		<li>Protect Medicaid and CHIP from cuts</li>
                                 <br>
