--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -186,6 +186,7 @@ We express our deep gratitude to the many lawmakers, legislative staff, partners
                     	<div>
                     		<img src="img/books.png" alt="Books" class="priorityimg img-responsive pull-right">
                     	</div>
+                        <p class="policydescrip">The House worked hard to craft a reasonable plan for school finance reform, but it unraveled when zealots in the Senate added school vouchers and removed most of the funding. Modest increases were made in need-based financial aid and support for community colleges, but the state continued to underinvest in higher education. Fortunately, several damaging bills were blocked that would have cut funding to higher education, eliminated financial aid for Texas students and overridden local payday lending regulations. Fear-mongering tarnished Texas’ long-held reputation for sensible immigration policies, and led to passage of a “show me your papers” law that will force immigrants into the shadows, threatening public safety and the Texas economy.</p>
                         <div class="row">
                     	<div class="col-xs-12 col-sm-4" id="eoobjectives">
                     		<h1>Our Objectives</h1>
