switched class on first subhead for correct colors

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -142,7 +142,7 @@ We express our deep gratitude to the many lawmakers, legislative staff, partners
                     	<img src="img/heart.png" alt="Heart" class="priorityimg img-responsive pull-right">
                     </div>
                     <p class="policydescrip">CPPP engaged in a two-front war during the 85th session, defending health and hunger benefits at both the state and federal levels. Under-funding of Medicaid in the budget process received strong attention and was fortunately reduced by two-thirds, and legislators extensively debated their responsibility to more adequately fund Medicaid in 2019. Texas lawmakers advanced no sweeping gains in coverage for 4.6 million uninsured, while Congress debated bills that would increase the ranks of the uninsured. Still, lawmakers achieved a surprising number of policy advances in mental health and kinship care. Support also came from across the political spectrum for consumer protections in commercial health insurance and for improved access to non-physician providers in Medicaid.</p>
-                    <h4 class="visiontitleinvest">Making sure all Texans have meaningful access to affordable health care.</h4>
+                    <h4 class="visiontitlehealth">Making sure all Texans have meaningful access to affordable health care.</h4>
                     <div class="row">
                     	<div class="col-xs-12 col-sm-4" id="hwobjectives">
                     		<h1>Our Objectives</h1>
