changed objectives to a class, not ID

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -144,7 +144,7 @@ We express our deep gratitude to the many lawmakers, legislative staff, partners
                     <p class="policydescrip">CPPP engaged in a two-front war during the 85th session, defending health and hunger benefits at both the state and federal levels. Under-funding of Medicaid in the budget process received strong attention and was fortunately reduced by two-thirds, and legislators extensively debated their responsibility to more adequately fund Medicaid in 2019. Texas lawmakers advanced no sweeping gains in coverage for 4.6 million uninsured, while Congress debated bills that would increase the ranks of the uninsured. Still, lawmakers achieved a surprising number of policy advances in mental health and kinship care. Support also came from across the political spectrum for consumer protections in commercial health insurance and for improved access to non-physician providers in Medicaid.</p>
                     <h4 class="visiontitlehealth">Making sure all Texans have meaningful access to affordable health care.</h4>
                     <div class="row">
-                    	<div class="col-xs-12 col-sm-4" id="hwobjectives">
+                    	<div class="col-xs-12 col-sm-4 hwobjectives">
                     		<h2>Our Objectives</h2>
                         		<li>Protect Medicaid and CHIP from cuts</li>
                                 <br>
@@ -189,7 +189,7 @@ We express our deep gratitude to the many lawmakers, legislative staff, partners
                     	</div>
                         <p class="policydescrip">The House worked hard to craft a reasonable plan for school finance reform, but it unraveled when zealots in the Senate added school vouchers and removed most of the funding. Modest increases were made in need-based financial aid and support for community colleges, but the state continued to underinvest in higher education. Fortunately, several damaging bills were blocked that would have cut funding to higher education, eliminated financial aid for Texas students and overridden local payday lending regulations. Fear-mongering tarnished Texas’ long-held reputation for sensible immigration policies, and led to passage of a “show me your papers” law that will force immigrants into the shadows, threatening public safety and the Texas economy.</p>
                         <div class="row">
-                    	<div class="col-xs-12 col-sm-4" id="eoobjectives">
+                    	<div class="col-xs-12 col-sm-4 eoobjectives">
                     		<h2>Our Objectives</h2>
                         		<li>Protect Medicaid and CHIP from cuts</li>
                                 <br>
