finished it section

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -499,30 +499,47 @@ We express our deep gratitude to the many lawmakers, legislative staff, partners
                         <div class="row">
                     	<div class="col-xs-12 col-sm-4 itobjectives">
                     		<h2>Our Objectives</h2>
-                        		<li>Increase and improve the integration of higher education and workforce data</li>
+                        		<li>Pass a state budget that better funds necessary public services</li>
                                 <br>
-                           	 	<li>Increase support for the Accelerate Texas program, which integrates basic skills with workforce training</li>
+                                <li>Prevent harmful tax cuts or revenue diversions</li>
                                 <br>
-                            	<li>Expand access to retirement savings in the workplace</li>
+                           	 	<li>Reject a tighter state spending cap</li>
                                 <br>
-                                <li>Increase the state minimum wage</li>
+                            	<li>Use the Rainy Day Fund, if needed, to prevent major cuts to education and health care</li>
                                 <br>
+                                <li>Block efforts to further restrict local governments' ability to raise the revenue needed for public services</li>
+                                <br>
+                                <li>Improve the appraisal process to ensure assessment of all property at full market value</li>
                         </div>
                     	<div class="col-xs-12 col-sm-offset-1 col-sm-7">
                         	<h1>Good Bills Passed or Bad Bills Blocked</h1>
-                        		<p>Legislation passed to expand reporting for the current Texas work study program.</p>
+                        		<li>The 2018-2019 budget provides notable increases for child protective services, some community mental health programs, and state highways, but almost all other areas lost ground to population and cost growth.</li>
+                                <br>
+                                <li>Two harmful proposals to eliminate the franchise tax, authored by powerful legislators, passed their initial chamber but died in the other.</li>
+                                <br>
+                                <li>A dangerous proposal to require special elections when city, county, and other local governments want to increase their property tax collections beyond certain amounts was killed in a House committee after passing the Senate.</li>
+                                <br>
+                                <li>A "priority" Lieutenant Governor's bill to tighten a state spending cap passed the Senate but was never heard by a House committee.</li>
                         </div>
                         <br>
                         <br>
                         <div class="col-xs-12 col-sm-offset-5 col-sm-7">
+                        	<h1>Other Progress Made</h1>
+                            	<li>The House passed a set of good changes to notices of property tax appraisals and local budget/tax hearings, but the bill died at the end of the session.</li>
+                                <br>
+                                <li>A bill to study sales taxes on online purchases passed the Senate but failed to get a hearing in a House committee.</li>
+                                <br>
+                                <li>A proposal by the Comptroller to lower the cap on the Economic Stabilization Fund (Rainy Day Fund) and create a new fund to generate more revenue received a positive reception but ran out of time this legislative session.</li>
+                        </div>
+                        <div class="col-xs-12 col-sm-offset-5 col-sm-7">
                         	<h1>Missed Opportunities and New Challenges</h1>
-                        		<li>Lawmakers cut $4 million from the Accelerate Texas program, which integrates basic skills with workforce training.</li>
+                        		<li>The Legislature significantly underfunded Medicaid, creating the need for a larger-than-usual supplemental budget in 2019.</li>
                                 <br>
-                                <li>After voted out of the House Higher Ed Committee, a bill died that would have required colleges and universities to provide applicants with employment data relating to fields of study.</li>
+                                <li>A good bill to keep seniors from getting priced out of their homes by property taxes died on the House Local and Consent Calendar because of political maneuvering.</li>
                                 <br>
-                                <li>A proposal to create a new Texas college work-study program died in the Senate after being voted out of both Higher Ed Committees.</li>
+                                <li>A bill to improve oversight of Chapter 313 school property tax breaks passed the Senate but died in a House committee.</li>
                                 <br>
-                                <li>Proposals to expand access to retirement savings and raise the minimum wage all died in committee.</li>
+                                <li>Several tax transparency bills died, including publishing a list of businesses that benefit from tax breaks and disclosing sales prices for properties.</li>
                         </div>
                     </div>
                        		
