--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -428,7 +428,7 @@ We express our deep gratitude to the many lawmakers, legislative staff, partners
                                 <li>Increase the state minimum wage</li>
                                 <br>
                         </div>
-                    	<div class="col-xs-12 col-sm-7">
+                    	<div class="col-xs-12 col-sm-offset-1 col-sm-7">
                         	<h1>Good Bills Passed or Bad Bills Blocked</h1>
                         		<p>Legislation passed to expand reporting for the current Texas work study program.</p>
                         </div>
