priorities was spelled wrong.

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -93,7 +93,7 @@
     <section class="container-fluid">
     <div class="text-center" id="coversection">
     <h1 id="coverheadline">The 85th Legislature Was Out of Sync with Texans Values and Needs</h1>
-    <p id="coverbyline"><i>By Ann Beeson, Executive Director of the Center for Public Policy Priorites</i></p>
+    <p id="coverbyline"><i>By Ann Beeson, Executive Director of the Center for Public Policy Priorities</i></p>
     
     	<figure class="figure">
   <img src="img/rotundaprotest.jpg" class="figure-img img-fluid rounded" alt="Activists protest Senate Bill 2 in the Capitol Rotunda." id="coverimage">
