added collapsable text for cover letter

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -83,7 +83,7 @@
         <div class="header-content">
             <div class="inner">
             	<a href="http://cppp.org"> <img src="img/2016_CPPP_Logo_Reverse_web.png" alt="Logo" class="logo"></a>
-                <h1>Wrap Up of the 85th Legislature</h1>
+                <h1>Wrap-Up of the Regular 85th Legislative Session</h1>
             </div>
         </div>
         <video autoplay loop class="fillWidth fadeIn wow collapse in" data-wow-delay="0.3s" poster="img/P1000145000.jpg" id="video-background">
@@ -92,8 +92,6 @@
     </header>
     <section class="container-fluid">
     <div class="text-center" id="coversection">
-    <h1 id="coverheadline">The 85th Legislature Was Out of Sync with Texans Values and Needs</h1>
-    <p id="coverbyline"><i>By Ann Beeson, Executive Director of the Center for Public Policy Priorities</i></p>
     
     	<figure class="figure">
   <img src="img/rotundaprotest.jpg" class="figure-img img-fluid rounded" alt="Activists protest Senate Bill 2 in the Capitol Rotunda." id="coverimage">
@@ -101,8 +99,13 @@
 </figure>
 <br>
 <br>
- 
-<p class="text-left drop-cap">The 85th Texas Regular Legislative Session was one of the ugliest and least productive in recent memory. Despite the odds, CPPP staff worked tirelessly with lawmakers and partners to get good bills across the finish line and block bad ones. 
+
+<div class="bs-example"> 
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="span4 collapse-group">
+          <h1>The 85th Legislature Was Out of Sync with Texans Values and Needs</h1>
+           <p class="collapse" id="viewdetails">The 85th Texas Regular Legislative Session was one of the ugliest and least productive in recent memory. Despite the odds, CPPP staff worked tirelessly with lawmakers and partners to get good bills across the finish line and block bad ones. 
 <br>
 Lawmakers spent precious time and energy on discriminatory responses to manufactured problems, instead of focusing on the real challenges facing our state. They missed countless opportunities to adopt policies that would have made Texas healthier, better educated and more financially secure. While a few sensible policies managed to make it through, overall the session pitted Texans against their neighbors while failing to invest in a strong future for hard-working people and their families.
 <br><br>
@@ -124,8 +127,12 @@ There were some silver linings, and CPPP’s data and advocacy helped lawmakers 
 <br><br>
 In addition to the good bills that passed, CPPP helped block or reduce the harm from several terrible bills – including efforts to subsidize private school tuition through vouchers, eliminate the state’s main business tax, restrict the ability of cities and counties to raise revenue, and remove a key source of financial aid for 87,000 Texas students.
 <br><br>
-We express our deep gratitude to the many lawmakers, legislative staff, partners and supporters who persisted in the face of daunting odds to fight for hard-working Texans and their families. As lawmakers take a brief break before the special session, CPPP will continue to analyze what passed and what didn’t, explain the implications for Texas, and build momentum for policies that enable Texans of all backgrounds to reach their full potential.
-</p>
+We express our deep gratitude to the many lawmakers, legislative staff, partners and supporters who persisted in the face of daunting odds to fight for hard-working Texans and their families. As lawmakers take a brief break before the special session, CPPP will continue to analyze what passed and what didn’t, explain the implications for Texas, and build momentum for policies that enable Texans of all backgrounds to reach their full potential.</p>
+          <p><a class="btn" data-toggle="collapse" data-target="#viewdetails">View details &raquo;</a></p>
+        </div>
+      </div>
+     </div>
+ 
         
     </div>
     <br>
