Changed "view details" to read more

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -105,7 +105,7 @@
       <div class="row">
         <div class="span4 collapse-group">
           <h1>The 85th Legislature Was Out of Sync with Texans Values and Needs</h1>
-           <p class="collapse" id="viewdetails">The 85th Texas Regular Legislative Session was one of the ugliest and least productive in recent memory. Despite the odds, CPPP staff worked tirelessly with lawmakers and partners to get good bills across the finish line and block bad ones. 
+           <p class="collapse" id="Read More">The 85th Texas Regular Legislative Session was one of the ugliest and least productive in recent memory. Despite the odds, CPPP staff worked tirelessly with lawmakers and partners to get good bills across the finish line and block bad ones. 
 <br>
 Lawmakers spent precious time and energy on discriminatory responses to manufactured problems, instead of focusing on the real challenges facing our state. They missed countless opportunities to adopt policies that would have made Texas healthier, better educated and more financially secure. While a few sensible policies managed to make it through, overall the session pitted Texans against their neighbors while failing to invest in a strong future for hard-working people and their families.
 <br><br>
