--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -422,16 +422,16 @@ We express our deep gratitude to the many lawmakers, legislative staff, partners
     <footer id="footer">
         <div class="container-fluid">
             <div class="row">
-            	<div class="col-xs-12">
+            	<div class="col-xs-12 col-sm-4">
                 	<a class="twitter-timeline" data-width="350" data-height="300" href="https://twitter.com/CPPP_TX/lists/cppp-staff">A Twitter List by CPPP_TX</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
-                <div class="col-xs-12">
+                <div class="col-xs-12 col-sm-4">
                  
                     <a href="http://cppp.org"><img src="img/2015_COM_CPPP_logo_letterhead.png" class="logo img-responsive center-block" alt="CPPP Logo"></a>
                     <p>CPPP is an independent public policy organization that uses data and analysis to advocate for solutions that enable Texans of all backgrounds to reach their full potential. We dare Texas to be the best state for hard-working people and their families. If you have any questions about this data or something else in our work, please contact Oliver Bernstein at <a href="mailto:bernstein@cppp.org">bernstein@cppp.org.</a></p>
                 </div>
                 
-                <div class="col-xs-12" id="last">
+                <div class="col-xs-12 col-sm-4" id="last">
                     <h4>Follow</h4>
                     <ul class="list-inline">
                       <li><a rel="nofollow" href="http://www.twitter.com/cppp_tx" title="Twitter"><i class="icon-lg ion-social-twitter-outline"></i></a>&nbsp;</li>
