changed home link, wrap up link on navbar

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -49,13 +49,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#first">Home</a>
+                <a class="navbar-brand page-scroll" href="http://www.forabettertexas.org/txlegepriorities">Home</a>
             </div>
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
                     
                     <li>
-                        <a class="page-scroll" href="/txlegepriorities/priorities">Our Priorities</a>
+                        <a class="page-scroll" href="/txlegepriorities/wrapup">Wrap Up</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#five">Health and Wellness</a>
