added wrap-up button to front page

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
             	<a href="http://cppp.org"> <img src="img/2016_CPPP_Logo_Reverse_web.png" alt="Logo" class="logo"></a>
                 <h1>2017 Legislative Session</h1>
                 <p>Updated 4/4/2017</p>
+                <div>
+        			<a href="wrapup/index.html" alt="Point of Order signup" class="poosignup">Read Our Wrap-Up of the Regular 85th Legislative Session</a>
+        		</div>
             </div>
         </div>
         <video autoplay loop class="fillWidth fadeIn wow collapse in" data-wow-delay="0.3s" poster="img/P1000145000.jpg" id="video-background">
