--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -85,6 +85,9 @@
             	<a href="http://cppp.org"> <img src="img/2016_CPPP_Logo_Reverse_web.png" alt="Logo" class="logo"></a>
                 <h1>Wrap-Up of the Regular 85th Legislative Session</h1>
             </div>
+            <div>
+            	<a href="https://forabettertexas.org/images/2017_06_85thLege_WrapUp.pdf" class="pdfbutton">Download PDF Version</a>
+            </div>
         </div>
         <video autoplay loop class="fillWidth fadeIn wow collapse in" data-wow-delay="0.3s" poster="img/P1000145000.jpg" id="video-background">
             <source src="img/legevideo.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.</source>
