--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -83,7 +83,7 @@
         <div class="header-content">
             <div class="inner">
             	<a href="http://cppp.org"> <img src="img/2016_CPPP_Logo_Reverse_web.png" alt="Logo" class="logo"></a>
-                <h1>Wrap-Up of the Regular 85th Legislative Session</h1>
+            	<h1>Wrap-Up of the 2017 Legislative Sessions</h1>
             </div>
             <div>
             	<a href="https://forabettertexas.org/images/2017_06_85thLege_WrapUp.pdf" class="pdfbutton">Download PDF Version</a>
