--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -86,7 +86,10 @@
             	<h1>Wrap-Up of the 2017 Legislative Sessions</h1>
             </div>
             <div>
-            	<a href="https://forabettertexas.org/images/2017_06_85thLege_WrapUp.pdf" class="pdfbutton">Download PDF Version</a>
+            	<a href="https://forabettertexas.org/images/2017_06_85thLege_WrapUp.pdf" class="pdfbutton">Regular Session Wrap-Up (PDF)</a>
+            </div>
+            <div>
+            	<a href="../img/2017_08_SpecialSession_WrapUp_insert.pdf" class="pdfbutton">Special Session Wrap-Up (PDF)</a>
             </div>
         </div>
         <video autoplay loop class="fillWidth fadeIn wow collapse in" data-wow-delay="0.3s" poster="img/P1000145000.jpg" id="video-background">
