saved index file

--- a/wrapup/index.html
+++ b/wrapup/index.html
@@ -88,8 +88,8 @@
             <div>
             	<a href="https://forabettertexas.org/images/2017_06_85thLege_WrapUp.pdf" class="pdfbutton">Regular Session Wrap-Up (PDF)</a>
             </div>
-            <div>
-            	<a href="../img/2017_08_SpecialSession_WrapUp_insert.pdf" class="pdfbutton">Special Session Wrap-Up (PDF)</a>
+            <div id="specialbutton">
+            	<a href="../img/2017_08_SpecialSession_WrapUp_insert.pdf" class="pdfbuttonspecial">Special Session Wrap-Up (PDF)</a>
             </div>
         </div>
         <video autoplay loop class="fillWidth fadeIn wow collapse in" data-wow-delay="0.3s" poster="img/P1000145000.jpg" id="video-background">
